Added regular expressions

--- a/index.html
+++ b/index.html
@@ -24,36 +24,36 @@
                         <div class="row mb-3">
                             <div class="col-4">
                                 <label for="card-number" class="mb-2">Card #</label>
-                                <input type="text" class="form-control" name="card-number" id="card-number" minlength="13" maxlength="18" placeholder="XXXXXXXXXXXXX" required >
+                                <input type="text" class="form-control" name="card-number" id="card-number" minlength="13" maxlength="18" pattern="^\d{13,18}$" placeholder="XXXXXXXXXXXXX" required >
                             </div>
                             <div class="col-4">
                                 <label for="CVC-number" class="mb-2">CVC #</label>
-                                <input type="text" class="form-control" name="CVC" id="CVC-number" maxlength="4" placeholder="0000" required>
+                                <input type="text" class="form-control" name="CVC" id="CVC-number" minlength="4" maxlength="4" pattern="^\d{4,4}$" placeholder="0000" required>
                             </div>
                             <div class="col-4">
                                 <label for="amount" class="mb-2">Amount</label>
-                                <input type="text" class="form-control" name="amount" id="amount" placeholder="Amount" required>
+                                <input type="text" class="form-control" name="amount" id="amount" maxlength="5" pattern="^\d{1,5}$" placeholder="Amount" required>
                             </div>
                         </div>
                         <div class="row mb-3" >
                             <div class="col-6">
                                 <label for="first-name" class="mr-sm-2 mb-2">First Name</label>
-                                <input type="text" class="form-control" name="first-name" id="first-name" required>
+                                <input type="text" class="form-control" name="first-name" id="first-name" pattern="^[A-Za-z]+(?: [A-Za-z]+)?$" required>
                             </div>
                             <div class="col-6">
                                 <label for="last-name" class="mb-2">Last Name</label>
-                                <input type="text" class="form-control" name="last-name" id="last-name" placeholder="" required>
+                                <input type="text" class="form-control" name="last-name" id="last-name" pattern="^[A-Za-z]+(?: [A-Za-z]+)?$" placeholder="" required>
                             </div>
                         </div>
                         <div class="row mb-3">
                             <div class="col-6">
                                 <label for="city" class=" mb-2">City</label>
-                                <input type="text" class="form-control" name="city" id="city" required>
+                                <input type="text" class="form-control" name="city" id="city" pattern="^[A-Za-z]+(?: [A-Za-z]+)?$" required>
                             </div>
                             <div class="col-3">
                                 <label for="state" class="mb-2">State</label>
                                 <select class="custom-select form-select" id="state" required>
-                                  <option selected hidden>Pick a state</option>
+                                <option value="" selected hidden>Pick a state</option>
                                   <option value="1">Arizona</option>
                                   <option value="2">California</option>
                                   <option value="3">Florida</option>
@@ -61,15 +61,13 @@
                             </div>
                             <div class="col-3">
                                 <label for="postal-code" class="mr-sm-2 mb-2">Postal Code</label>
-                                <input type="text" class="form-control" name="postal" id="postal-code" required>
+                                <input type="text" class="form-control" name="postal" id="postal-code" minlength="5" maxlength="5" pattern="^[0-9]+$" required>
                             </div>
                         </div>
                         <div class="row mb-3">
-                                <div class="col-6">
+                                <div class="col-6 d-flex flex-column justify-content-start align-items-start">
                                     <p class="mb-2">We accept:</p>
-                                    <!-- <div class="col-6 bg-danger"> -->
-                                            
-                                            <div class="col-5 bg-secondary py-2 rounded ps-3">
+                                            <div class="w-auto bg-secondary py-2 rounded px-2">
                                                 <div class="form-check form-check-inline ms-2 me-2">
                                                     <input class="form-check-input" type="radio" name="card-type" id="mastercard" value="option1" checked>
                                                     <label class="form-check-label form-check-lg" for="mastercard">
@@ -95,8 +93,6 @@
                                                     </label>
                                                 </div>
                                             </div>
-                                            
-                                        <!-- </div> -->
                                 </div>
                                 <div class="col-6">
                                     <label class="mb-2" for="message">Message</label>
@@ -106,7 +102,6 @@
                         </div>
                         <div class="card-footer d-flex">
                             <input type="button" class="btn btn-secondary ms-auto me-2" value="Cancel">
-
                             <input type="submit" class="btn btn-primary" value="Send">
                         </div>
                     </form>
