--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                         <div class="row mb-3">
                                 <div class="col-md-6 col-sm-12">
                                     <p class="mb-2">We accept:</p>
-                                            <div class="d-md-inline-flex bg-secondary py-2 rounded px-2 mb-2 d-sm-inline-flex d-inline-flex">
-                                                <div class="form-check form-check-inline ms-3 me-2">
+                                            <div class="d-md-inline-flex bg-secondary py-2 rounded px-2 mb-2 d-sm-inline-flex ">
+                                                <div class="form-check form-check-inline ms-sm-3 me-3 ms-0">
                                                     <input class="form-check-input" type="radio" name="card-type" id="mastercard" value="option1" checked>
                                                     <label class="form-check-label form-check-lg" for="mastercard">
                                                         <i class="fa-brands fa-cc-mastercard fa-sm"></i>
